# baremetal-agent

./: .gitignore  README.md  agent.py  cli.py  client.py  config.py  main.py  pyproject.toml  ruff.toml  tools.py  trajectory.py  visualizer.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml
.gspec/: brief.md
baremetal_agent/: __init__.py  __main__.py  agent.py  cli.py  client.py  config.py  tools.py  trajectory.py  visualizer.py
tests/: conftest.py  test_agent.py  test_cli.py  test_config.py  test_tools.py  test_trajectory.py  test_visualizer.py
