[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "baremetal-agent"
version = "0.1.0"
description = "A framework-free tool-use routing engine — raw LLM API calls + a loop."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "httpx",
    "rich",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
]

[project.scripts]
baremetal-agent = "baremetal_agent.cli:run"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
# E: pycodestyle errors, F: pyflakes, I: isort, UP: pyupgrade
# B: bugbear (catches real bugs), SIM: simplify

[tool.pytest.ini_options]
testpaths = ["tests"]
